Fix Overflow-X

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+body {
+  overflow-x: hidden;
+}
+
 @media (min-width: 768px) {
   .navbar-nav {
     float: none;
@@ -48,7 +52,7 @@
   position: relative;
   height: 100vh;
 }
+
 .about {
   background: #fff4e9;
-  s
 }
